--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
+  <script src="https://kit.fontawesome.com/942391f47d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/styles.css">
   <title>Welcome to TUI WOLD!</title>
 </head>
@@ -58,12 +58,106 @@
 
  -->
 
-  <div class="container">
-    <h3>Deal of the Week</h3>
+  <h3>Deal of the Week</h3>
+
+  <div class="container-fluid">
 
 
+    <div class="row my-5 no-gutters mx-n1  ">
 
-  </div>
+      <div class="col-class col-sm-6 col-md-4  col-lg-3">
+
+        <div class="row bg-light ">
+          <div class="col-6  ">
+            <img src="/img/deal-1.webp" alt="">
+          </div>
+          <div class="col-6">
+            <h3>Riu Yucatan</h3>
+            <p>PLAYACAR, MEXICO - CARIBBEAN COAST, MEXICO</p>
+
+            <p><i class="fas fa-info-circle"></i> Hotel Overview</p>
+            <p><i class="fas fa-plane-departure"></i> Manchester</p>
+            <p><i class="far fa-calendar-alt"></i> Fri 09 Jul 2021 </p>
+            <p><i class="fas fa-hotel"></i> 21 nights All Inclusive</p>
+
+          </div>
+        </div>
+      </div>
+
+      <!-- Second -->
+      <div class="  col-class col-sm-6 ol-class col-md-4 col-lg-3   ">
+        <div class="row bg-light">
+          <div class="col-6 img-fluid ">
+            <img src="/img/deal-1.webp" alt="">
+          </div>
+
+          <div class="col-6 ">
+            <h3>Riu Yucatan</h3>
+            <p>PLAYACAR, MEXICO - CARIBBEAN COAST, MEXICO</p>
+
+            <p><i class="fas fa-info-circle"></i> Hotel Overview</p>
+            <p><i class="fas fa-plane-departure"></i> Manchester</p>
+            <p><i class="far fa-calendar-alt"></i> Fri 09 Jul 2021 </p>
+            <p><i class="fas fa-hotel"></i> 21 nights All Inclusive</p>
+
+          </div>
+        </div>
+
+      </div>
+
+      <!-- third -->
+
+      <div class=" col-class col-sm-6 col-md-4  col-lg-3  ">
+
+        <div class="row bg-light">
+          <div class="col-6 ">
+            <img src="/img/deal-1.webp" alt="">
+          </div>
+
+          <div class="col-6">
+            <h3>Riu Yucatan</h3>
+            <p>PLAYACAR, MEXICO - CARIBBEAN COAST, MEXICO</p>
+
+            <p><i class="fas fa-info-circle"></i> Hotel Overview</p>
+            <p><i class="fas fa-plane-departure"></i> Manchester</p>
+            <p><i class="far fa-calendar-alt"></i> Fri 09 Jul 2021 </p>
+            <p><i class="fas fa-hotel"></i> 21 nights All Inclusive</p>
+
+          </div>
+        </div>
+
+
+      </div>
+
+      <!-- fourth -->
+
+      <div class=" col-class col-sm-6 col-md-4 col-lg-12   ">
+
+        <div class="row bg-light">
+          <div class="col-6 img-fluid ">
+            <img src="/img/deal-1.webp" alt="">
+          </div>
+
+          <div class="col-6">
+            <h3>Riu Yucatan</h3>
+            <p>PLAYACAR, MEXICO - CARIBBEAN COAST, MEXICO</p>
+
+            <p><i class="fas fa-info-circle"></i> Hotel Overview</p>
+            <p><i class="fas fa-plane-departure"></i> Manchester</p>
+            <p><i class="far fa-calendar-alt"></i> Fri 09 Jul 2021 </p>
+            <p><i class="fas fa-hotel"></i> 21 nights All Inclusive</p>
+
+          </div>
+        </div>
+
+
+      </div>
+
+
+    </div> <!-- Row -->
+  </div> <!-- container -->
+
+
 
   <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
