--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
  -->
 
-  <h3>Deal of the Week</h3>
+  <h3 class="h3">Deal of the Week</h3>
 
   <div class="container-fluid">
 
@@ -157,18 +157,49 @@
     </div> <!-- Row -->
   </div> <!-- container -->
 
+  <h3 class="h3"> Summer Deal of the Week</h3>
+  <section id="summer">
+    <div class="container">
+      <div class="row d-flex justify-content-center">
+        <div class="col col-sm-6 col-md-3 col-xl-2">
+          <img src="https://source.unsplash.com/random" width="45%">
+          <p width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="col col-sm-6 col-md-3 col-xl-2">
+          <img src="https://source.unsplash.com/random" width="45%">
+          <p width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="col col-sm-6 col-md-3 col-xl-2">
+          <img src="https://source.unsplash.com/random" width="45%">
+          <p width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="col col-sm-6 col-md-3 col-xl-2">
+          <img src="https://source.unsplash.com/random" width="45%">
+          <p width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="col col-sm-6 col-md-3 col-xl-2">
+          <img src="https://source.unsplash.com/random" width="45%">
+          <p width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="col col-sm-6 col-md-3 col-xl-2">
+          <img src="https://source.unsplash.com/random" width="45%">
+          <p width="100%">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </div>
 
 
-  <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
-  </script>
 
-  <!-- Option 2: Separate Popper and Bootstrap JS -->
-  <!--
+    <!-- Option 1: jQuery and Bootstrap Bundle (includes Popper) -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous">
+    </script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
