--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
       <div class="col-class col-sm-6 col-md-4  col-lg-3">
 
         <div class="row bg-light ">
-          <div class="col-6  ">
+          <div class=" col-sm-12 col-md-6   ">
             <img src="/img/deal-1.webp" alt="">
           </div>
-          <div class="col-6">
+          <div class=" col-sm-12 col-md-6 ">
             <h3>Riu Yucatan</h3>
             <p>PLAYACAR, MEXICO - CARIBBEAN COAST, MEXICO</p>
 
@@ -87,7 +87,7 @@
       <!-- Second -->
       <div class="  col-class col-sm-6 ol-class col-md-4 col-lg-3   ">
         <div class="row bg-light">
-          <div class="col-6 img-fluid ">
+          <div class="col-sm-12 col-md-6 ">
             <img src="/img/deal-1.webp" alt="">
           </div>
 
@@ -110,11 +110,11 @@
       <div class=" col-class col-sm-6 col-md-4  col-lg-3  ">
 
         <div class="row bg-light">
-          <div class="col-6 ">
+          <div class="col-sm-12 col-md-6">
             <img src="/img/deal-1.webp" alt="">
           </div>
 
-          <div class="col-6">
+          <div class="col-sm-12 col-md-6">
             <h3>Riu Yucatan</h3>
             <p>PLAYACAR, MEXICO - CARIBBEAN COAST, MEXICO</p>
 
@@ -134,11 +134,11 @@
       <div class=" col-class col-sm-6 col-md-4 col-lg-12   ">
 
         <div class="row bg-light">
-          <div class="col-6 img-fluid ">
+          <div class="col-sm-12 col-md-6 ">
             <img src="/img/deal-1.webp" alt="">
           </div>
 
-          <div class="col-6">
+          <div class="col-sm-12 col-md-6">
             <h3>Riu Yucatan</h3>
             <p>PLAYACAR, MEXICO - CARIBBEAN COAST, MEXICO</p>
 
