--- a/index.html
+++ b/index.html
@@ -45,8 +45,46 @@
     </div>
   </nav>
 
+  <!-- Carousel -->
 
-
+  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/img/carpusel-1.webp" class="d-block  img-height w-100 " alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>First slide label</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/img/carpusel-2.webp" class="d-block img-height  w-100 " alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="/img/carpusel-3.webp" class="d-block  img-height  w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
 
 
   <!-- 
@@ -60,16 +98,16 @@
 
   <h3 class="h3">Deal of the Week</h3>
 
-  <div class="container-fluid">
+  <div class="container-fluid px-0">
 
 
-    <div class="row my-5 no-gutters mx-n1  ">
+    <div class="row my-5  mx-n5  ">
 
-      <div class="col-class col-sm-6 col-md-4  col-lg-3">
+      <div class="  col-class col-sm-6 col-md-4  col-lg-6 ">
 
         <div class="row bg-light ">
           <div class=" col-sm-12 col-md-6   ">
-            <img src="/img/deal-1.webp" alt="">
+            <img class=" w-100" src="/img/deal-1.webp" alt="">
           </div>
           <div class=" col-sm-12 col-md-6 ">
             <h3>Riu Yucatan</h3>
@@ -79,16 +117,17 @@
             <p><i class="fas fa-plane-departure"></i> Manchester</p>
             <p><i class="far fa-calendar-alt"></i> Fri 09 Jul 2021 </p>
             <p><i class="fas fa-hotel"></i> 21 nights All Inclusive</p>
+            <button class="btn bg-danger text-white my-3"> Book It Now </button>
 
           </div>
         </div>
       </div>
 
       <!-- Second -->
-      <div class="  col-class col-sm-6 ol-class col-md-4 col-lg-3   ">
+      <div class="  col-class col-sm-6 ol-class col-md-4 col-lg-6  ">
         <div class="row bg-light">
           <div class="col-sm-12 col-md-6 ">
-            <img src="/img/deal-1.webp" alt="">
+            <img class="w-100" src="/img/deal-1.webp" alt="">
           </div>
 
           <div class="col-6 ">
@@ -99,6 +138,7 @@
             <p><i class="fas fa-plane-departure"></i> Manchester</p>
             <p><i class="far fa-calendar-alt"></i> Fri 09 Jul 2021 </p>
             <p><i class="fas fa-hotel"></i> 21 nights All Inclusive</p>
+            <button class="btn bg-danger text-white my-3"> Book It Now </button>
 
           </div>
         </div>
@@ -107,11 +147,11 @@
 
       <!-- third -->
 
-      <div class=" col-class col-sm-6 col-md-4  col-lg-3  ">
+      <div class=" col-class col-sm-6 col-md-4  col-lg-6  ">
 
         <div class="row bg-light">
           <div class="col-sm-12 col-md-6">
-            <img src="/img/deal-1.webp" alt="">
+            <img class="w-100" src="/img/deal-1.webp" alt="">
           </div>
 
           <div class="col-sm-12 col-md-6">
@@ -122,6 +162,7 @@
             <p><i class="fas fa-plane-departure"></i> Manchester</p>
             <p><i class="far fa-calendar-alt"></i> Fri 09 Jul 2021 </p>
             <p><i class="fas fa-hotel"></i> 21 nights All Inclusive</p>
+            <button class="btn bg-danger text-white my-3"> Book It Now </button>
 
           </div>
         </div>
@@ -131,11 +172,11 @@
 
       <!-- fourth -->
 
-      <div class=" col-class col-sm-6 col-md-4 col-lg-12   ">
+      <div class=" col-class col-sm-6 col-md-4  col-lg-6 ">
 
         <div class="row bg-light">
-          <div class="col-sm-12 col-md-6 ">
-            <img src="/img/deal-1.webp" alt="">
+          <div class="col-sm-12 col-md-6   ">
+            <img class=" w-100" src="/img/deal-1.webp" alt="">
           </div>
 
           <div class="col-sm-12 col-md-6">
@@ -146,6 +187,7 @@
             <p><i class="fas fa-plane-departure"></i> Manchester</p>
             <p><i class="far fa-calendar-alt"></i> Fri 09 Jul 2021 </p>
             <p><i class="fas fa-hotel"></i> 21 nights All Inclusive</p>
+            <button class="btn bg-danger text-white my-3"> Book It Now </button>
 
           </div>
         </div>
